# hrplanes-airplane-detection

hrplanes-airplane-detection/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
hrplanes-airplane-detection/artifacts/metrics/: results_final.csv
hrplanes-airplane-detection/artifacts/plots/: .gitkeep
hrplanes-airplane-detection/artifacts/weights/: README.md
hrplanes-airplane-detection/configs/: train_config.yaml
hrplanes-airplane-detection/scripts/: prepare_dataset.py  train.py  val.py
hrplanes-airplane-detection/src/: __init__.py  dataset.py  model.py  trainer.py  utils.py  validator.py
hrplanes-airplane-detection/tests/: test_dataset.py  test_validator.py
